fixed: css over 992px, fixed height on popular article, nav max-width and alignment

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -193,14 +193,14 @@ form .fa-map-marker-alt {
 
 #popular article {
   margin-bottom: 1em;
+  height: 150px;
   justify-content: space-between;
   flex-wrap: wrap;
-  flex-basis: 100%;
 }
 
 #popular article a {
   border: 4px solid #ffffff;
-  height: 150px;
+  height: 100%;
   justify-content: flex-start;
   align-items: flex-start;
   flex-basis: 100%;
@@ -260,6 +260,7 @@ form .fa-map-marker-alt {
   width: 100%;
   height: 60%;
   border-radius: 1.2em 1.2em 0 0;
+  object-position: 50% 75%;
 }
 
 #accomodation .description {
@@ -460,16 +461,19 @@ footer div li {
 
   header > a:nth-child(2) {
     order: 1;
+    text-align: right;
+    flex-basis: 10%;
   }
 
   nav {
     margin-top: 0;
+    max-width: 350px;
     flex-basis: 40%;
   }
 
   nav ul li {
     border-bottom: 0;
-    justify-content: space-around;
+    text-align: right;
   }
 
   nav ul li:hover {
@@ -522,53 +526,22 @@ footer div li {
     padding: 2em 3em 0em;
   }
 
-  #find-a-room {
-    flex-direction: row;
-    padding: 1em 3em;
-  }
-
   /* POPULAR */
-
   #popular {
-    margin-right: 0;
-    margin-bottom: 1em;
-    padding: 2em;
-    flex-direction: column;
-    justify-content: space-between;
-    flex-basis: 35%;
-    order: 1;
-  }
-
-  #popular h2 {
-    flex: 0;
-  }
-
-  #popular article {
-    height: 180px;
-    flex: 0;
-  }
-
-  #popular article a {
-    height: 180px;
-  }
-
-  #popular article a figure {
-    flex-basis: 35%;
-  }
-
-  #popular article a .description {
-    flex-basis: 65%;
+    margin: 1em 3em 0;
   }
 
   /* ACCOMODATION */
 
-  #accomodation {
-    background-color: #f2f2f2;
-    border-radius: 1.2em;
-    margin-right: 1em;
-    padding: 2em 2em;
-    flex-basis: 65%;
+  #accomodation article {
+    flex-basis: 30%;
   }
+
+  #accomodation a:nth-child(8) {
+    flex-basis: 100%;
+  }
+
+  /* ACTIVITIES */
 
   #activities a {
     margin-bottom: 2em;
